RESOLVED FIXED 84007
[Chromium] Calendar Picker: Popup position is wrong when there are no enough space below the target date field
https://bugs.webkit.org/show_bug.cgi?id=84007
Summary [Chromium] Calendar Picker: Popup position is wrong when there are no enough ...
Kent Tamura
Reported 2012-04-15 21:53:08 PDT
Created attachment 137277 [details] Screenshot Calendar Picker: Popup position is wrong when there are no enough space below the target date field
Attachments
Screenshot (39.24 KB, image/png)
2012-04-15 21:53 PDT, Kent Tamura
no flags
Patch (3.85 KB, patch)
2012-04-16 21:55 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2012-04-16 21:55:04 PDT
WebKit Review Bot
Comment 2 2012-04-17 00:40:46 PDT
Comment on attachment 137475 [details] Patch Clearing flags on attachment: 137475 Committed r114357: <http://trac.webkit.org/changeset/114357>
WebKit Review Bot
Comment 3 2012-04-17 00:40:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.